--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header>
             <div class="hero-img"> </div>
             <nav class="nav-bar">
-                <img class="logo" src="/imgs/netflix_logo.png" alt="Logo de Netflix" aria-label="Logo de Netflix">
+                <img class="logo" src="./imgs/netflix_logo.png" alt="Logo de Netflix" aria-label="Logo de Netflix">
                 <ul class="nav-menu">
                     <li>
                         <select class="language-select">
