Agrega estilos a la sección del footer

--- a/index.html
+++ b/index.html
@@ -169,40 +169,45 @@
                 </div>
 
                 <div class="question-container">
-                    <h3>¿Es bueno Netflix para los niños?</h3>
+                    <h3>¿Qué puedo ver en Netflix?</h3>
                 </div>
 
                 <div class="question-container">
-                    <h3>¿Qué es Netflix?</h3>
+                    <h3>¿Es bueno Netflix para los niños?</h3>
                 </div>
             </section>
 
-            <section class="join-now-section">
-                <button class="join-now-button">Unirte ahora ></button>
-                <p>Crea o reinicia tu membresía</p>
+            <section class="join-now">
+                <p>¿Quieres ver Netflix ya? Ingresa tu email para crear una cuenta 
+                    o reiniciar tu membresía de Netflix.
+                </p>
+                <form class="join-now-form">
+                    <input type="email" placeholder="Email" class="email-search-bar">
+                    <button type="submit" class="join-now-button">Comenzar ></button>
+                </form>
             </section>
         </main>
         <footer>
             <p>¿Preguntas? Llama al 800 953 1430</p>
-            <div class="footer-links">
-                <ul>
-                    <li><a href="#">Preguntas frecuentes</a></li>
-                    <li><a href="#">Centro de ayuda</a></li>
-                    <li><a href="#">Cuenta</a></li>
-                    <li><a href="#">Prensa</a></li>
-                    <li><a href="#">Relaciones con inversionistas</a></li>
-                    <li><a href="#">Empleo</a></li>
-                    <li><a href="#">Tienda de Netflix</a></li>
-                    <li><a href="#">Canjear tarjetas de regalo</a></li>
-                    <li><a href="#">Formas de ver</a></li>
-                    <li><a href="#">Términos de uso</a></li>
-                    <li><a href="#">Privacidad</a></li>
-                    <li><a href="#">Preferencias de cookies</a></li>
-                    <li><a href="#">Información corporativa</a></li>
-                    <li><a href="#">Contáctanos</a></li>
-                    <li><a href="#">Prueba de velocidad</a></li>
-                    <li><a href="#">Avisos legales</a></li>
-                    <li><a href="#">Solo en Netflix</a></li>
+            <div class="footer-content">
+                <ul class="footer-links">
+                    <li><a href="#" class="footer-link">Preguntas frecuentes</a></li>
+                    <li><a href="#" class="footer-link">Centro de ayuda</a></li>
+                    <li><a href="#" class="footer-link">Cuenta</a></li>
+                    <li><a href="#" class="footer-link">Prensa</a></li>
+                    <li><a href="#" class="footer-link">Relaciones con inversionistas</a></li>
+                    <li><a href="#" class="footer-link">Empleo</a></li>
+                    <li><a href="#" class="footer-link">Tienda de Netflix</a></li>
+                    <li><a href="#" class="footer-link">Canjear tarjetas de regalo</a></li>
+                    <li><a href="#" class="footer-link">Formas de ver</a></li>
+                    <li><a href="#" class="footer-link">Términos de uso</a></li>
+                    <li><a href="#" class="footer-link">Privacidad</a></li>
+                    <li><a href="#" class="footer-link">Preferencias de cookies</a></li>
+                    <li><a href="#" class="footer-link">Información corporativa</a></li>
+                    <li><a href="#" class="footer-link">Contáctanos</a></li>
+                    <li><a href="#" class="footer-link">Prueba de velocidad</a></li>
+                    <li><a href="#" class="footer-link">Avisos legales</a></li>
+                    <li><a href="#" class="footer-link">Solo en Netflix</a></li>
                 </ul>
                 <select class="language-select">
                     <option value="Español">Español</option>
