--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/svg+xml" href="./imgs/netflix-logo-icon.svg">
         <link rel="stylesheet" href="style.css">
         <title>Netflix México: Ve series online, ve películas online</title>
     </head>
