--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         <option value="English">English</option>
                     </select>
                 </div>
-                <p>Netflix México</p>
+                <p>Netflix México | versión 1.2</p>
             </div>
         </footer>
     </body>
